infrastructure/k8s/torrent/deluge.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: torrent
    app.kubernetes.io/name: torrent
  name: torrent
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: torrent
  name: deluge
spec:
  replicas: 1
  serviceName: deluge
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
      - name: deluge
        image: lscr.io/linuxserver/deluge:latest
        ports:
        - containerPort: 8112
        - containerPort: 6881
        - containerPort: 6881
          protocol: UDP
        volumeMounts:
          - mountPath: /downloads
            name: deluge-volume-claim
            subPath: downloads
          - mountPath: /config
            name: deluge-volume-claim
            subPath: config
  volumeClaimTemplates:
    - metadata:
        name: deluge-volume-claim
        labels:
          app: deluge
      spec:
        storageClassName: local-storage
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 4Ti
---
apiVersion: v1
kind: Service
metadata:
  namespace: torrent
  name: deluge
spec:
  selector:
    app: deluge
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8112
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: torrent
  name: deluge
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.santelos.com"
    secretName: santelos-cert
  rules:
  - host: deluge.santelos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deluge
            port:
              number: 80
